--- a/css/index.css
+++ b/css/index.css
@@ -53,6 +53,7 @@ table {
 html{
 	font-size:62.5%;
 	font-family: 'Montserrat', sans-serif;
+	background-color:#307672;
 }
 header{
 	background-color:#1a3c40;
@@ -60,9 +61,10 @@ header{
 }
 
 h1{
-    font-size: 5rem;
+    font-size: 6rem;
 	color:#307672;
 	font-family: 'Kalam', cursive;
+	margin:0 4%;
 }
 nav{
 	display:flex;
@@ -79,4 +81,26 @@ nav a{
 	background-color:#144d53;
 	margin: 0 2%;
 	padding:1%;
+}
+nav a:hover{
+	background-color:#e4eddb;
+	color:#144d53;
+}
+.markBody{
+	background-image: url("https://images.unsplash.com/photo-1518335935020-cfd6580c1ab4?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60");
+	background-repeat: no-repeat;
+	background-size: cover;
+	background-attachment: fixed;
+}
+.markBody p{
+	text-align: center;
+	font-size:2rem;
+	font-weight: bold;
+	color: #e4eddb;
+	line-height: 5rem;
+	border:2px solid #e4eddb;
+	width:40%;
+	margin:6% 29%;
+	background-color:#144d53;
+	border-radius:10px;
 }
