--- a/css/index.css
+++ b/css/index.css
@@ -55,6 +55,8 @@ html{
 	font-family: 'Montserrat', sans-serif;
 	background-color:#307672;
 }
+
+/*header area */
 header{
 	background-color:#1a3c40;
 	padding:2%;
@@ -86,21 +88,82 @@ nav a:hover{
 	background-color:#e4eddb;
 	color:#144d53;
 }
+
+/*body area of marketing page */
 .markBody{
 	background-image: url("https://images.unsplash.com/photo-1518335935020-cfd6580c1ab4?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60");
 	background-repeat: no-repeat;
 	background-size: cover;
 	background-attachment: fixed;
+	
+	
+}
+.markBody h2{
+	font-size:3rem;
+	color:#e4eddb;
+	text-align:center;
+	padding:2%;
+	font-weight:bold;
+}
+.markBody img{
+	border-radius:10px;
+	width:40%;
+	margin:2% 30%;
+}
+.markBody div{
+	padding:1% 0;
 }
 .markBody p{
+	padding:.5%;
+	width:38%;
+	margin:6% 31%;
 	text-align: center;
 	font-size:2rem;
 	font-weight: bold;
 	color: #e4eddb;
 	line-height: 5rem;
 	border:2px solid #e4eddb;
-	width:40%;
-	margin:6% 29%;
 	background-color:#144d53;
 	border-radius:10px;
+}
+
+
+
+/* footer area */
+footer{
+	padding:2%;
+}
+
+/* Body of the About page */
+.aboutBody{
+	Background-image: url("https://images.unsplash.com/photo-1527341944416-23e85b614715?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60");
+	background-repeat: no-repeat;
+	background-size: cover;
+	background-attachment: fixed;
+}
+.aboutBody div{
+	display:flex;
+	flex-direction:column;
+	flex-wrap:wrap;
+	border:2px solid #e4eddb;
+	margin:0 35% 2%;
+	border-radius:10px;	
+	padding:2%;
+}
+.aboutBody img{
+	width:90%;
+	margin:2% 5%;
+	border-radius:10px;
+}
+
+.aboutBody h2{
+	font-size:2rem;
+	color: #e4eddb;
+	text-align:center;
+	margin:0 0 2%;
+}
+.aboutBody h3{
+	font-size:1.8rem;
+	color: #e4eddb;
+	text-align:center;
 }
