--- a/css/index.css
+++ b/css/index.css
@@ -66,13 +66,13 @@ h1{
     font-size: 5rem;
 	color:#307672;
 	font-family: 'Kalam', cursive;
-	margin:0 4%;
+	margin:2% 4%;
 }
 nav{
 	display:flex;
 	flex-direction: column;
 	font-size:2rem;
-	margin:2% 15%;
+	margin:2% 5%;
 	text-align:center;
 	
 }
@@ -99,6 +99,7 @@ nav a:hover{
 	
 	
 }
+
 .markBody h2{
 	font-size:3rem;
 	color:#e4eddb;
@@ -153,9 +154,16 @@ footer{
 	flex-direction:column;
 	flex-wrap:wrap;
 	border:2px solid #e4eddb;
-	margin:0 10% 2%;
+	margin:0 10% 5%;
 	border-radius:10px;	
 	padding:2%;
+	background-color:rgba(196, 221, 223, 0.329);
+}
+.imgContainer{
+	display:flex;
+	flex-direction:row;
+	flex-wrap:wrap;
+	
 }
 .aboutBody img{
 	width:90%;
@@ -167,12 +175,15 @@ footer{
 	font-size:3rem;
 	color: #e4eddb;
 	text-align:center;
-	margin:0 0 2%;
+	margin:0 0 4%;
 }
 .aboutBody h3{
 	font-size:1.8rem;
 	color: #e4eddb;
 	text-align:center;
+	margin:6% 0;
+	font-weight:bold;
+	
 }
 
 /* media tags */
@@ -186,8 +197,15 @@ footer{
 	}
 	.aboutBody div{
 		display:flex;
-		flex-direction:row;
 		flex-wrap:wrap;
-		width:20%;
+		width:25%;
+	}
+}
+@media(min-width:1000px){
+	.markBody p{
+		width:75%;
+	}
+	.markBody img{
+		width:75%;
 	}
 }
