--- a/css/index.css
+++ b/css/index.css
@@ -86,12 +86,12 @@ nav a{
 	background-color:#144d53;
 	margin: 1.5% 2%;
 	padding:1.5%;
-	box-shadow: 5px 5px 5px #307673dc;
+	box-shadow: 3px 3px 3px #307673dc;
 }
 nav a:hover{
 	background-color:#e4eddb;
 	color:#144d53;
-	box-shadow: 5px 5px 5px #307673dc;
+	box-shadow: 3px 3px 3px #307673dc;
 }
 
 /*body area of marketing page */
@@ -100,7 +100,8 @@ nav a:hover{
 	background-repeat: no-repeat;
 	background-size: cover;
 	background-attachment: fixed;
-	
+	border-bottom:5px double #e4eddb;
+	border-top:5px double #e4eddb;
 	
 }
 
@@ -110,10 +111,11 @@ nav a:hover{
 	text-align:center;
 	padding:2%;
 	font-weight:bold;
+	text-shadow: 3px 3px 3px #307673dc;
 }
 .markBody img{
 	width:80%;
-	border-radius:10px;
+	border-radius:20px;
 	margin:2% 10%;
 	box-shadow: 10px 10px 10px #144d53dc;
 }
@@ -131,7 +133,7 @@ nav a:hover{
 	line-height: 5rem;
 	border:2px solid #e4eddb;
 	background-color:#144d53;
-	border-radius:10px;
+	border-radius:20px;
 	box-shadow: 10px 10px 10px #144d53dc;
 }
 
@@ -155,6 +157,8 @@ footer nav a:hover{
 	background-repeat: no-repeat;
 	background-size: cover;
 	background-attachment: fixed;
+	border-bottom:5px double #e4eddb;
+	border-top:5px double #e4eddb;
 }
 .title {
 	
@@ -171,7 +175,7 @@ footer nav a:hover{
 	border-radius:10px;	
 	padding:2%;
 	background-color:rgba(196, 221, 223, 0.329);
-	box-shadow: 10px 10px 10px #307673dc;
+	
 }
 .imgContainer{
 	display:flex;
@@ -182,7 +186,8 @@ footer nav a:hover{
 .aboutBody img{
 	width:90%;
 	margin:2% 5%;
-	border-radius:10px;
+	border-radius:20px;
+	box-shadow: 4px 4px 4px #144d53dc
 }
 
 .aboutBody h2{
@@ -205,6 +210,12 @@ footer nav a:hover{
 @media(min-width:600px){
 	h1{
 		font-size:6rem;
+	}
+	header nav a{
+		box-shadow: 5px 5px 5px #307673dc;
+	}
+	header nav a:hover{
+		box-shadow: 5px 5px 5px #307673dc;
 	}
 	nav {
 		display:flex;
@@ -229,6 +240,10 @@ footer nav a:hover{
 	h1{
 		font-size:7rem;
 	}
+	
+	.markBody h2{
+		font-size:4rem;
+	}
 	.aboutBody h2{
 		font-size:4rem;
 	}
@@ -242,6 +257,10 @@ footer nav a:hover{
 @media(min-width:1000px){
 	h1{
 		font-size:8rem;
+	}
+
+	.markBody h2{
+		font-size:5rem;
 	}
 	.aboutBody h2{
 		font-size:5rem;
